Feat & Test: Implemented Board Logic, and tested it